WIP on extending overlay to fix SR-737